# phorce

./: README.md  environment.yml  preprocessing_config.json  pyproject.toml
docs/: Full_Pipeline.drawio  Step0_database_curation.drawio  Step1_preprocess.drawio  Step2_engineer_features.drawio  Step3_label_domains.drawio  Step4_create_domain_subsets.drawio  Step5_analyze_processed.drawio  Step6_analyze_domains.drawio  Step7_analyze_subdomains.drawio  drawio.drawio  pipeline_flowchart.md
phorce_benchmark/: LICENSE  README.md
phorce_benchmark/data/: benchmark_assembled.csv  benchmark_audit.csv  dash_data.json  dt50_lab_vs_typical.csv  rule_brier_vs_benchmark.csv  rule_validation_metrics.csv
phorce_benchmark/extract/: ppdb_extract.py  ppdb_extract_pdf.py
phorce_benchmark/pipeline/: assemble_benchmark.py  compute_brier.py  make_figures.py  validate_rules.py
scripts/: analyze_decision_trees.py  analyze_domains.py  analyze_processed.py  analyze_subdomains.py  create_domain_subsets.py  engineer_features.py  label_domains.py  preprocess_data.py
